--- a/src/assets/scss/cubed-css/variables.scss
+++ b/src/assets/scss/cubed-css/variables.scss
@@ -15,11 +15,13 @@ $gray-dark: mix($gray, $black, 50%);
 
 // $primary: #007fff;
 $primary: #166dff;
+// $primary: #00ead0;
 $primary-darker: #1935BF;
 
 // feedback colors
-$success: #17cf73;
-$info: #4ca5ff;
+$success: #35ff9a;
+// $info: #4ca5ff;
+$info: #0091ff;
 $warning: #f5bb46;
 $danger: #e22942;
 $dark: #333;
