--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,6 +114,7 @@ a.block {
 
   &.outline {
     padding: 1rem 2rem;
+    margin-bottom: 1rem;
     text-align: inherit;
 
     &:before {
